[package]
name = "iced_baseview_test_vst2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "iced_baseview_test_vst2"
crate-type = ["cdylib"]

[dependencies]
vst = "0.2"
baseview = {git = "https://github.com/RustAudio/baseview", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909" }
raw-window-handle = "0.3"
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview", branch="main", features=["canvas"] }
log = "0.4"
simplelog = "0.11"
dirs = "4"
iced = { version = "0.3", features = ["canvas"] }
ringbuf = "0.2"
